ECA-7825: modify script files to work with Java 11, where endorsed dirs has been removed, and old GCs are deprecated.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@31791 37aeb1de-b14b-0410-9a0e-82b28170d228